--- a/src/main/resources/db/migrations/03-pendencia_comercial.yml
+++ b/src/main/resources/db/migrations/03-pendencia_comercial.yml
@@ -26,10 +26,10 @@ databaseChangeLog:
                   type: NUMBER
               - column:
                   name: ORIGEM
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: TIPO_OCORRENCIA
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: QUANTIDADE
                   type: NUMBER
