--- a/src/main/resources/db/migrations/07-pendencia_bancaria.yml
+++ b/src/main/resources/db/migrations/07-pendencia_bancaria.yml
@@ -26,13 +26,13 @@ databaseChangeLog:
                   type: NUMBER
               - column:
                   name: SUB_TIPO
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: TIPO_OCORRENCIA
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: ORIGEM
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: QUANTIDADE
                   type: NUMBER
