--- a/src/main/resources/db/migrations/08-protestos.yml
+++ b/src/main/resources/db/migrations/08-protestos.yml
@@ -26,10 +26,10 @@ databaseChangeLog:
                   type: NUMBER
               - column:
                   name: SUB_TIPO
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: ORIGEM
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: TOTAL
                   type: NUMBER
