--- a/src/main/resources/db/migrations/06-falencia_concordata.yml
+++ b/src/main/resources/db/migrations/06-falencia_concordata.yml
@@ -26,7 +26,7 @@ databaseChangeLog:
                   type: NUMBER
               - column:
                   name: ORIGEM
-                  type: varchar
+                  type: varchar(255)
               - column:
                   name: QUANTIDADE
                   type: NUMBER
