Refatoracao nome das colunas

--- a/src/main/resources/db/migrations/03-pendencia_comercial.yml
+++ b/src/main/resources/db/migrations/03-pendencia_comercial.yml
@@ -31,7 +31,7 @@ databaseChangeLog:
                   name: TIPO_OCORRENCIA
                   type: varchar(255)
               - column:
-                  name: QUANTIDADE
+                  name: TOTAL
                   type: NUMBER
               - column:
                   name: CONSULTA_ID
