--- a/src/main/resources/db/migrations/05-convem_devedores.yml
+++ b/src/main/resources/db/migrations/05-convem_devedores.yml
@@ -28,7 +28,7 @@ databaseChangeLog:
                   name: ORIGEM
                   type: varchar(255)
               - column:
-                  name: QUANTIDADE
+                  name: TOTAL
                   type: NUMBER
               - column:
                   name: CONSULTA_ID
