--- a/src/main/resources/db/migrations/07-pendencia_bancaria.yml
+++ b/src/main/resources/db/migrations/07-pendencia_bancaria.yml
@@ -34,7 +34,7 @@ databaseChangeLog:
                   name: ORIGEM
                   type: varchar(255)
               - column:
-                  name: QUANTIDADE
+                  name: TOTAL
                   type: NUMBER
               - column:
                   name: CONSULTA_ID
